--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ button {
   cursor: pointer;
 }
 
+button i.fa {
+  /* change the color of the icon */
+  color: #3366cc;
+}
+
+
 #text-input {
   margin-top: 20px;
   padding: 10px;
