--- a/style.css
+++ b/style.css
@@ -43,3 +43,12 @@ button i.fa {
   font-weight: bold;
   color: #3366cc;
 }
+
+#answer-box {
+  margin-top: 20px;
+  font-size: 24px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 400px;
+}
+
